--- a/styles/style.css
+++ b/styles/style.css
@@ -104,8 +104,9 @@ span {
 
 /* Plan * Mission Section */
 .section-plan {
-    padding: 0 130px 130px;
+    padding: 0px 0px 130px;
 }
+
 
 .plan-container {
     text-align: center;
